changed sonarcloud credentials

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=isdi-coders-2022_Francesco-Fabrissin_Front-Final-Project-202204-BCN
-sonar.organization=isdi-coders-2022
+sonar.projectKey=fra432_RecordSwapp-front
+sonar.organization=fra432
 
 sonar.sources=./src
 
